# TestDlls

./: CMakeLists.txt  thedll.sln
AppTest/: AppTest.vcxproj  AppTest.vcxproj.filters  CMakeLists.txt  TestSource.cpp
app/: CMakeLists.txt  app.cpp  app.vcxproj  app.vcxproj.filters  stdafx.h
dll/: CMakeLists.txt  ReadMe.txt  Source.def  dll.cpp  dll.h  dll.vcxproj  dll.vcxproj.filters  stdafx.h
dllstatic/: CMakeLists.txt  ReadMe.txt  Source.cpp  dllstatic.vcxproj  dllstatic.vcxproj.filters
feeDll/: CMakeLists.txt  FeeSource.cpp  Source.def  feeDll.h  feeDll.vcxproj  feeDll.vcxproj.filters
